2011-06-27 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* testsuite/TestHexParserModule.cpp: Relative path for examples.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/Makefile.am: Fixed include directory of external solver.

2011-06-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/TestMLPSolver.cpp: Removed some hard-coded relative
	paths, missing bits and pieces are for Tri to fix.

2011-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Create libhex.a and libhexND.a to reduce
	compile-time by 33%. Can be further improved by compiling
	$(top_srcdir)/src/dlvhex/lib{X,Y,Z}.a.

	* README: Small fixes.

	* src/dlvhex/Makefile.am (dlvhex_LDADD): Move @LIBCURL@ to the
	end of the list, linux i386 linker is sensitive to this.

	* configure.ac: Fix messages.

	* examples/tests/query_hex_ground1ca.stdout: Remove whitespace in
	wc output. (ticket #46)

2011-06-17 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestMLPSolver.cpp: Test different available solver.

	* include/dlvhex/MLPSolver.hpp: Not always assuming clingo.

2011-06-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Incorporating libclingo as the backend solver.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.

	* src/dlvhex/dlvhex.cpp: Bugfix for libclingo.

	* include/dlvhex/MLPSolver.hpp: Collecting the largest bottom and turned off some log-printings.

2011-06-07 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Minimize branching in the beginning.

2011-06-07 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Finishing Instantiation splitting.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

2011-06-06 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Implementing instantiation splitting: using Top data structure.
